# SecureSignedMailService

./: .gitignore  CMakeLists.txt  README.md  ssms.code-workspace
.github/workflows/: ccpp.yml  main.workflow  main.yml
SSMS/: .gitignore  CMakeLists.txt  Makefile
SSMS/src/: Base64.cpp  Base64.h  CMakeLists.txt  Cli.cpp  Cli.h  Crypto.cpp  Crypto.h  MailBox.cpp  MailBox.h  SSMS.cpp  User.cpp  User.h
SSMS/src/unittest/: CMakeLists.txt  Test_Base64.cpp  Test_Base64.h  Test_Cli.cpp  Test_Cli.h  Test_Crypto.cpp  Test_Crypto.h  Test_MailBox.cpp  Test_MailBox.h  Test_Ssms.cpp  Test_Ssms.h  Test_User.cpp  Test_User.h
